--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,72 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
+  height: auto;
+  width: 100vw;
+  margin: 0 3rem 0 3rem;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.header-text {
+  font-size: 1.7rem;
+  animation-name: example;
+  animation-duration: 4s;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.login-register-block {
+  display: flex;
+  flex-direction: row;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.login-form {
+  width: 40vw;
+  height: 40vh;
+  margin-right: auto;
 }
 
-.card {
-  padding: 2em;
+.register-form {
+  width: 40vw;
+  height: 40vh;
+  margin-left: auto;
 }
 
-.read-the-docs {
-  color: #888;
+.register-form-display {
+  width: 40vw;
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.login-form-display {
+  width: 40vw;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.login-form-label {
+  font-size: 3rem;
+}
+
+.login-form-input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+.login-form-button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  margin-top: 2em;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
 }
