--- a/frontend/src/pages/AuthPage.css
+++ b/frontend/src/pages/AuthPage.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    padding: 25vh 5vw 25vh 5vw;
 }
 
 .form-display {
