--- a/frontend/src/views/Dashboard.css
+++ b/frontend/src/views/Dashboard.css
@@ -1,3 +1,29 @@
 .dashboard {
-    margin: auto;
+    display: flex;
+    width: 100%;
+    margin: 0;
+    padding: 20px;
+    flex-direction: column;
+}
+
+.dashboard-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    height: 100%;
+}
+
+.dashboard-content-button {
+    background-color: #333;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 120px;
+}
+
+.dashboard-content-button:hover {
+    background-color: #33333300;
+    cursor: pointer;
 }
