--- a/frontend/src/components/AuthForm.css
+++ b/frontend/src/components/AuthForm.css
@@ -9,8 +9,10 @@
   
 .auth-form-input {
     width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
+    /* padding: 12px 20px;
+    margin: 8px 0; */
+    font-size: 2rem;
+    margin: 5px;
     box-sizing: border-box;
 }
   
