--- a/frontend/src/views/DeckEdit.css
+++ b/frontend/src/views/DeckEdit.css
@@ -6,6 +6,26 @@
     flex-direction: column;
 }
 
+.deck-edit-header {
+    display: flex;
+}
+
+.deck-edit-tile {
+    max-width: 1100px;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
+.deck-edit-header-title {
+    width: 90%;
+    padding: 3rem;
+    margin: 1rem;
+    overflow: hidden;
+}
+.deck-edit-header-button {
+    margin: auto;
+}
+
 .flashcards {
     display: flex;
     width: 100%;
@@ -58,15 +78,6 @@
     overflow-x: auto;
 }
 
-.flashcard-item-button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6em 1.2em;
+.deck-edit-button {
     margin: auto;
-    font-size: 1em;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
 }
