--- a/frontend/src/views/DeckEdit.css
+++ b/frontend/src/views/DeckEdit.css
@@ -14,6 +14,7 @@
     max-width: 1100px;
     overflow-x: auto;
     overflow-y: hidden;
+    line-height: 1.3;
 }
 
 .deck-edit-header-title {
@@ -69,4 +70,11 @@
 
 .deck-edit-button {
     margin: auto;
+}
+
+.deck-title-input {
+    display: flex;
+    margin: auto;
+    font-size: 2rem;
+    box-sizing: border-box;
 }
