--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,7 @@
 #root {
-  height: 90vh;
+  height: 100vh;
   width: 100vw;
-  margin: 0 3rem 0 3rem;
-  padding: 2rem;
+  /* margin: 0 3rem 0 3rem;
+  padding: 2rem; */
   text-align: center;
 }
